--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,7 @@
   --color-white: #ffffff;
   --color-cloud: rgba(255, 255, 255, 0.9);
   --color-bg: whitesmoke;
-  --box-shadow-regular: #ffe5d6 0px 5px 10px;
+  --box-shadow-regular: #7da2b9 0px 5px 10px;
   /* --box-shadow-regular: rgba(0, 0, 0, 0.1) 0px 5px 10px; */
 }
 
