--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -43,7 +43,7 @@
 }
 
 .formClass > div:nth-child(3){
-  column-gap: 1%;
+  column-gap: 3%;
 }
 
 .formClass > div:last-child{
@@ -52,10 +52,11 @@
 
 .formClass input,
 .formClass select {
-  border: 0px none transparent;
+  border: 1px solid var(--color-icon-text);
   background-color: var(--color-blue-icon);
   padding: 2%;
   color: var(--color-icon-text);
+  border-radius: 10px;
 }
 
 .formClass select option {
@@ -70,10 +71,12 @@
 }
 .formClass button {
   padding: 0% 2%;
-  border: 0px none transparent;
-  background-color: var(--color-blue-icon);
+  border: 1px solid var(--color-icon-text);
+  background-color: var(--color-icon-text);
   border-radius: 15px;
-  color: var(--color-icon-text);
+  color: var(--color-blue-icon);
+  font-weight: 700;
+  font-size: 16px;
   width: 20%;
 }
 
@@ -81,6 +84,8 @@
   transition: .3s;
   box-shadow: var(--box-shadow-regular);
   cursor: pointer;
+  transform: translateY(-3px);
+  transition-duration: .3s;
 }
 
 .formClass input {
@@ -113,7 +118,7 @@
   font-size: 16px;
 }
 
-/* left part */
+/* right part */
 
 .mainClass {
   background-color: var(--color-icon-text);
