--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,7 +10,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top: 5%;
 }
 
 .img {
@@ -26,10 +27,10 @@
 .formClass {
   display: flex;
   flex-direction: column;
-  row-gap: 5%;
-  padding: 10% 10% 0% 10%;
+  row-gap: 10%;
+  padding: 13% 10% 0% 10%;
   width: 90%;
-  height: 40%;
+  height: 45%;
   color: var(--color-icon-text);
 }
 
@@ -40,6 +41,7 @@
 .formClass > div:first-child,
 .formClass > div:nth-child(2){
   column-gap: 5%;
+  padding-bottom: 2%;
 }
 
 .formClass > div:nth-child(3){
@@ -57,10 +59,11 @@
   padding: 2%;
   color: var(--color-icon-text);
   border-radius: 10px;
+  font-size: 16px;
 }
 
 .formClass select option {
-    font-size: 14px; 
+    font-size: 16px; 
 }
 
 .formClass label{
@@ -68,6 +71,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 .formClass button {
   padding: 0% 2%;
@@ -80,6 +84,7 @@
   width: 20%;
 }
 
+.formClass select:hover,
 .formClass button:hover {
   transition: .3s;
   box-shadow: var(--box-shadow-regular);
@@ -90,6 +95,12 @@
 
 .formClass input {
   padding: 3%;
+}
+
+.formClass h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .formClass input::placeholder {
@@ -110,12 +121,13 @@
 .formClass summary {
   cursor: pointer;
   padding-bottom: 1.5vh;
+  font-size: 16px;
 }
 
 .formClass details small{
   letter-spacing: 1.3px;
   line-height: 1.3;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 /* right part */
