style updated monbile version

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -205,7 +205,7 @@
 }
 
 /* mobile */
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
   .body {
     flex-direction: column;
   }
@@ -240,6 +240,44 @@
 
   .submit__button > button {
     height: 3vh;
+  }
+
+}
+
+/* tablet */
+@media screen and (max-width:767px) {
+  .body {
+    flex-direction: column;
+  }
+
+  .figure,
+  .mainClass {
+    width: 100%;
+  }
+
+  .formClass label {
+    font-size: 14px;
+  }
+
+  .figure {
+    height: 85vh;
+  }
+
+  .initial__word {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5vw;
+  }
+
+  .user__input {
+    display: flex;
+    column-gap: 3vw;
+  }
+
+
+  .submit__button > button {
+    height: 5vh;
+    width: 20vw;
   }
 
 }
