--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -44,13 +44,18 @@
   padding-bottom: 2%;
 }
 
-.formClass > div:nth-child(3){
-  column-gap: 3%;
+.initial__word {
+  display: flex;
+  flex-direction: row;
+  column-gap: 5vw;
 }
 
-.formClass > div:last-child{
-  flex-direction: column;
+.user__input {
+  display: flex;
+  flex-direction: row;
+  column-gap: 1vw;
 }
+
 
 .formClass input,
 .formClass select {
@@ -71,7 +76,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 18px;
 }
 .formClass button {
   padding: 0% 2%;
@@ -81,7 +86,8 @@
   color: var(--color-blue-icon);
   font-weight: 700;
   font-size: 16px;
-  width: 20%;
+  width: 6vw;
+  height: 4.5vh;
 }
 
 .formClass select:hover,
@@ -110,7 +116,6 @@
 .formClass input:focus {
   border: 1px solid var(--color-cloud);
 }
-
 
 .formClass details {
   width: 100%;
@@ -234,34 +239,21 @@
     column-gap: 3vw;
   }
 
-  .submit__button  {
-    width: 70vw;
-  }
 
   .submit__button > button {
-    height: 3vh;
+    height: 4vh;
+    width: 20vw;
   }
 
 }
 
 /* tablet */
-@media screen and (max-width:767px) {
-  .body {
-    flex-direction: column;
-  }
-
-  .figure,
-  .mainClass {
-    width: 100%;
-  }
+@media screen and (min-width:767px) and (max-width: 1023px) {
 
   .formClass label {
-    font-size: 14px;
+    font-size: 16px;
   }
 
-  .figure {
-    height: 85vh;
-  }
 
   .initial__word {
     display: flex;
