--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -56,15 +56,15 @@
   column-gap: 1vw;
 }
 
-
 .formClass input,
 .formClass select {
   border: 1px solid var(--color-icon-text);
   background-color: var(--color-blue-icon);
-  padding: 2%;
+  padding: 0% 2%;
   color: var(--color-icon-text);
   border-radius: 10px;
   font-size: 16px;
+  height: 5vh;
 }
 
 .formClass select option {
@@ -78,6 +78,7 @@
   justify-content: center;
   font-size: 18px;
 }
+
 .formClass button {
   padding: 0% 2%;
   border: 1px solid var(--color-icon-text);
@@ -87,7 +88,7 @@
   font-weight: 700;
   font-size: 16px;
   width: 6vw;
-  height: 4.5vh;
+  height: 5vh;
 }
 
 .formClass select:hover,
