--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -80,7 +80,6 @@
 }
 
 .formClass button {
-  padding: 0% 2%;
   border: 1px solid var(--color-icon-text);
   background-color: var(--color-icon-text);
   border-radius: 10px;
@@ -88,7 +87,7 @@
   font-weight: 700;
   font-size: 16px;
   width: 6vw;
-  height: 5vh;
+  height: 50px;
 }
 
 .formClass select:hover,
@@ -239,7 +238,7 @@
   }
 
   .submit__button > button {
-    height: 4vh;
+    height: 10vw;
     width: 20vw;
   }
 }
@@ -277,8 +276,8 @@
 
 
   .submit__button > button {
-    height: 4vh;
     width: 20vw;
+    height: 7vw;
   }
 
 }
@@ -305,6 +304,7 @@
 
   .submit__button > button {
     width: 12vw;
+    height: 5vw;
   }
 
 }
