--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -246,6 +246,11 @@
     font-size: 18px;
   }
 
+  .formClass {
+    padding: 8% 10% 0% 10%;
+    row-gap: 5%;
+  }
+
   .formClass input,
   .formClass select {
     height: 3vw;
