--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,7 +7,7 @@
 
   .figure {
     width: 100%;
-    height: 130vw;
+    height: 150vw;
     background-color: var(--color-blue-icon);
     display: flex;
     flex-direction: column;
@@ -206,7 +206,7 @@
 
 @media screen and (min-width:500px){
   .figure {
-    height: 150vw;
+    height: 170vw;
   }
 
   .submit__button > button {
@@ -248,7 +248,7 @@
 
   .formClass {
     padding: 8% 10% 0% 10%;
-    row-gap: 5%;
+    row-gap: 4%;
   }
 
   .formClass input,
@@ -256,9 +256,13 @@
     height: 3vw;
   }
 
+  .initial__word {
+    row-gap: 1.5vw;
+  }
+
   .submit__button > button {
     height: 3.5vw;
-    width: 12vw;
+    width: 10vw;
   }
 
 
