--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -127,7 +127,8 @@
   .formClass details small{
     letter-spacing: 1.3px;
     line-height: 1.3;
-    font-size: 14px;
+    font-size: 12px;
+    width: 100%;
   }
 
   /* bottom */
