--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,7 +7,8 @@
 
   .figure {
     width: 100%;
-    height: 170vw;
+    /* height: 170vw; */
+    height: max( max-content, 150vw );
     background-color: var(--color-blue-icon);
     display: flex;
     flex-direction: column;
@@ -156,7 +157,7 @@
   .mainClass {
     width: 100%;
     background-color: var(--color-icon-text);
-    height: 100vh;
+    height: max( max-content, 100vh );
     color: var(--color-regular-text);
   }
 
@@ -224,10 +225,12 @@
 
   .adjust__synonym h2 {
     width: 20vh;
+    font-size: 16px;
   }
 
   .adjust__synonym ul {
     padding-left: 3vh;
+    width: 80%;
   }
 
   .adjust__synonym li {
