--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,8 +7,8 @@
 
   .figure {
     width: 100%;
-    /* height: 170vw; */
-    height: max( max-content, 170vw );
+    height: 170vw;
+    /* height: max( max-content, 170vw ); */
     background-color: var(--color-blue-icon);
     display: flex;
     flex-direction: column;
