--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -167,6 +167,7 @@
     row-gap: 2vh;
     align-items: center;
     padding: 3%;
+    width: 90%;
   }
 
   .exampTitle {
@@ -278,6 +279,13 @@
     width: 13vw;
   }
 
+  .synonym h2 {
+    font-size: 18px;
+  }
+
+  .synonym li {
+    font-size: 14px;
+  }
 }
 
 @media screen and (min-width:1023px) {
