--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -194,10 +194,15 @@
   }
 
   .synonym h2 {
-    padding-bottom: 3%;
+    text-align: center;
+    width: 17vw;
+    font-size: 20px;
+    padding-bottom: 1%;
+    border-bottom: 1px solid var(--color-regular-text);
   }
 
   .synonym ul {
+    padding-top: 2%;
     padding-left: 3vh;
   }
 
@@ -280,11 +285,16 @@
   }
 
   .synonym h2 {
+    width: 10vw;
     font-size: 18px;
   }
 
   .synonym li {
     font-size: 14px;
+  }
+
+  .adjust__synonym ul > li:last-child{
+    display: none;
   }
 }
 
